--- a/po/he.po
+++ b/po/he.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD.he\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-11-23 07:14+0200\n"
+"POT-Creation-Date: 2006-11-23 11:46+0100\n"
 "PO-Revision-Date: 2006-04-14 17:07+0300\n"
 "Last-Translator: Yair Hershkovitz <yairhr@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
@@ -690,7 +690,7 @@ msgstr "Sans 10"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:74
 msgid "Show advanced permissions in in the file property dialog"
-msgstr ""
+msgstr "הצג הרשאות מתקדמות בחלון המאפיינים"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:75
 msgid "Show folders first in windows"
@@ -1384,14 +1384,12 @@ msgstr ""
 #: ../libnautilus-private/nautilus-file-operations.c:1171
 #, c-format
 msgid "A folder named \"%s\" already exists.  Do you want to replace it?"
-msgstr ""
-"התיקייה \"%s\" כבר קיימת.  האם ברצונך להחליפה?"
+msgstr "התיקייה \"%s\" כבר קיימת.  האם ברצונך להחליפה?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1174
 #, c-format
 msgid "A file named \"%s\" already exists.  Do you want to replace it?"
-msgstr ""
-"הקובץ \"%s\" כבר קיים.  האם ברצונך להחליפו?"
+msgstr "הקובץ \"%s\" כבר קיים.  האם ברצונך להחליפו?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1193
 #, c-format
@@ -1399,15 +1397,14 @@ msgid ""
 "The folder already exists in \"%s\".  Replacing it will overwrite any files "
 "in the folder that conflict with the files being copied."
 msgstr ""
-"התיקייה כבר קיימת ב-\"%s\"."
-" אם אתה מחליף את התיקייה הקיימת, כל הקבצים בה המתנגשים עם הקבצים המועתקים "
-"יוחלפו."
+"התיקייה כבר קיימת ב-\"%s\". אם אתה מחליף את התיקייה הקיימת, כל הקבצים בה "
+"המתנגשים עם הקבצים המועתקים יוחלפו."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1196
 #, c-format
 msgid ""
 "The file already exists in \"%s\".  Replacing it will overwrite its contents."
-msgstr ""
+msgstr "הקובץ כבר קיים ב-\"%s\". החלפתו תגרום לאבדן התוכן."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1213
 #: ../libnautilus-private/nautilus-file-operations.c:1232
@@ -1956,7 +1953,7 @@ msgstr "%m/%d/%y"
 #, c-format
 msgid "%u item"
 msgid_plural "%u items"
-msgstr[0] "פריט אחד"
+msgstr[0] "פריט %u"
 msgstr[1] "%u פריטים"
 
 #: ../libnautilus-private/nautilus-file.c:4324
@@ -2235,11 +2232,11 @@ msgstr "ריבוע הבחירה"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4862
 msgid "Normal Alpha"
-msgstr ""
+msgstr "אלפא רגילה"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4863
 msgid "Opacity of the normal icons if frame_text is set"
-msgstr ""
+msgstr "אטימות של סמלים רגילים אם frame_text נקבע"
 
 #: ../libnautilus-private/nautilus-icon-dnd.c:813
 msgid "Switch to Manual Layout?"
@@ -2625,20 +2622,20 @@ msgstr "בחר תיקייה בה לשמור את החיפוש"
 #: ../src/file-manager/fm-directory-view.c:2168
 #, c-format
 msgid "\"%s\" selected"
-msgstr "\"%s\" נבחר"
+msgstr "‏\"%s\" נבחר"
 
 #: ../src/file-manager/fm-directory-view.c:2170
 #, c-format
 msgid "%d folder selected"
 msgid_plural "%d folders selected"
-msgstr[0] "תיקייה אחת נבחרה"
+msgstr[0] "תיקייה %d נבחרה"
 msgstr[1] "%d תיקיות נבחרו"
 
 #: ../src/file-manager/fm-directory-view.c:2180
 #, c-format
 msgid " (containing %d item)"
 msgid_plural " (containing %d items)"
-msgstr[0] " (מכיל פריט אחד)"
+msgstr[0] " (מכיל פריט %d)"
 msgstr[1] " (מכיל %d פריטים)"
 
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
@@ -2646,13 +2643,13 @@ msgstr[1] " (מכיל %d פריטים)"
 #, c-format
 msgid " (containing a total of %d item)"
 msgid_plural " (containing a total of %d items)"
-msgstr[0] " (מכיל סך-הכל פריט אחד)"
+msgstr[0] " (מכיל סך-הכל פריט %d)"
 msgstr[1] " (מכיל סך-הכל %d פריטים)"
 
 #: ../src/file-manager/fm-directory-view.c:2207
 #, c-format
 msgid "\"%s\" selected (%s)"
-msgstr "\"%s\" נבחר (%s)"
+msgstr "‏\"%s\" נבחר (%s)"
 
 #: ../src/file-manager/fm-directory-view.c:2211
 #, c-format
@@ -2684,7 +2681,7 @@ msgstr "%s, מקום פנוי: %s"
 #: ../src/file-manager/fm-directory-view.c:2265
 #, c-format
 msgid "%s%s, %s"
-msgstr "%s%s, %s"
+msgstr "‏%s%s, %s"
 
 #. Note that the number of items actually displayed varies somewhat due
 #. * to the way files are collected in batches. So you can't assume that
@@ -3200,12 +3197,12 @@ msgstr "אתחל את הכרך הנבחר"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6903
 msgid "Mount the volume associated with the open folder"
-msgstr ""
+msgstr "חבר את הכרך המשוייך לתיקיה הפתוחה"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6907
 msgid "Unmount the volume associated with the open folder"
-msgstr ""
+msgstr "נתק את הכרך המשוייך לתיקייה הפתוחה"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6911
@@ -3215,7 +3212,7 @@ msgstr "הוצא את הכרך שמשוייך לתיקייה הפתוחה"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6915
 msgid "Format the volume associated with the open folder"
-msgstr ""
+msgstr "אתחל את הכרך המשוייך לתיקייה הפתוחה"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6918
@@ -3277,7 +3274,7 @@ msgstr "הצג קבצים _נסתרים"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6958
 msgid "Toggle the display of hidden files in the current window"
-msgstr "מתג את תצוגת הקבצים הנסתרים בחלון הנוכחי"
+msgstr "בחר אם להציג את הקבצים הנסתרים בחלון הנוכחי"
 
 #. Translators: %s is a directory
 #: ../src/file-manager/fm-directory-view.c:7044
@@ -3627,7 +3624,7 @@ msgstr "_כווץ סידור"
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1457
 msgid "Toggle using a tighter layout scheme"
-msgstr "מחליף לסכמת פיזור יותר צפופה"
+msgstr "בחר אם להחליף לסכמת פיזור צפופה יותר"
 
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1461
@@ -3895,11 +3892,11 @@ msgstr "סוג MIME:"
 
 #: ../src/file-manager/fm-properties-window.c:2740
 msgid "Modified:"
-msgstr "שונה:"
+msgstr "תאריך שינוי:"
 
 #: ../src/file-manager/fm-properties-window.c:2746
 msgid "Accessed:"
-msgstr "ניגש:"
+msgstr "תאריך גישה:"
 
 #: ../src/file-manager/fm-properties-window.c:2849
 #: ../src/nautilus-emblem-sidebar.c:1044
@@ -3948,19 +3945,16 @@ msgid "access"
 msgstr ""
 
 #: ../src/file-manager/fm-properties-window.c:3575
-#, fuzzy
 msgid "Access:"
-msgstr "ניגש:"
+msgstr "גישה:"
 
 #: ../src/file-manager/fm-properties-window.c:3577
-#, fuzzy
 msgid "Folder Access:"
-msgstr "_תיקייה:"
+msgstr "גישה לתיקייה:"
 
 #: ../src/file-manager/fm-properties-window.c:3579
-#, fuzzy
 msgid "File Access:"
-msgstr "ניגש:"
+msgstr "גישה לקבצים:"
 
 #: ../src/file-manager/fm-properties-window.c:3591
 #: ../src/file-manager/fm-properties-window.c:3602
@@ -3970,26 +3964,23 @@ msgstr "ללא"
 
 #: ../src/file-manager/fm-properties-window.c:3594
 msgid "List files only"
-msgstr ""
+msgstr "רשימת קבצים בלבד"
 
 #: ../src/file-manager/fm-properties-window.c:3596
-#, fuzzy
 msgid "Access files"
-msgstr "ניגש:"
+msgstr "גישה לקבצים"
 
 #: ../src/file-manager/fm-properties-window.c:3598
-#, fuzzy
 msgid "Create and delete files"
-msgstr "יוצר קישורים לקבצים"
+msgstr "יצירת ומחיקת קבצים"
 
 #: ../src/file-manager/fm-properties-window.c:3605
 msgid "Read-only"
-msgstr ""
+msgstr "קריאה בלבד"
 
 #: ../src/file-manager/fm-properties-window.c:3607
-#, fuzzy
 msgid "Read and write"
-msgstr "בצע שנית עריכה"
+msgstr "קריאה וכתיבה"
 
 #: ../src/file-manager/fm-properties-window.c:3672
 msgid "Set _user ID"
@@ -4031,7 +4022,7 @@ msgstr "קבוצה:"
 
 #: ../src/file-manager/fm-properties-window.c:3820
 msgid "Others"
-msgstr "_אחרים:"
+msgstr "אחרים"
 
 #: ../src/file-manager/fm-properties-window.c:3837
 msgid "Execute:"
@@ -4070,9 +4061,8 @@ msgid "Last changed:"
 msgstr "שונה לאחרונה:"
 
 #: ../src/file-manager/fm-properties-window.c:4218
-#, fuzzy
 msgid "Apply permissions to enclosed files"
-msgstr "ההרשאות של הקובץ."
+msgstr "החל הרשאות בכל הקבצים בתיקייה"
 
 #: ../src/file-manager/fm-properties-window.c:4228
 #, c-format
@@ -4302,15 +4292,17 @@ msgstr "לא ניתן להציג מיקום \"%s\""
 
 #: ../src/nautilus-connect-server-dialog-main.c:102
 msgid "[URI]"
-msgstr "[כתובת]"
+msgstr "[URI]"
 
 #: ../src/nautilus-connect-server-dialog-main.c:111
-#, fuzzy
 msgid ""
 "\n"
 "\n"
 "Add connect to server mount"
-msgstr "התחבר לשרת %s"
+msgstr ""
+"\n"
+"\n"
+"Add connect to server mount"
 
 #: ../src/nautilus-connect-server-dialog.c:113
 msgid "Custom Location"
@@ -4322,11 +4314,12 @@ msgstr "SSH"
 
 #: ../src/nautilus-connect-server-dialog.c:118
 msgid "Public FTP"
-msgstr "FTP ציבורי"
+msgstr ""
+"‏FTP ציבורי"
 
 #: ../src/nautilus-connect-server-dialog.c:120
 msgid "FTP (with login)"
-msgstr "FTP (עם התחברות("
+msgstr "FTP (עם התחברות)"
 
 #: ../src/nautilus-connect-server-dialog.c:123
 msgid "Windows share"
@@ -4768,9 +4761,8 @@ msgid "Date Taken"
 msgstr "תאריך לקיחה"
 
 #: ../src/nautilus-image-properties-page.c:226
-#, fuzzy
 msgid "Date Digitized"
-msgstr "תאריך שינוי"
+msgstr "תאריך יצירה"
 
 #: ../src/nautilus-image-properties-page.c:232
 msgid "Exposure Time"
@@ -5167,7 +5159,7 @@ msgstr "היסטוריית קדימה"
 
 #: ../src/nautilus-navigation-window.c:177
 msgid "Toggle between button and text-based location bar"
-msgstr ""
+msgstr "בחר אם להשתמש בתיבת מיקום מבוססת טקסט או כפתורים"
 
 #: ../src/nautilus-navigation-window.c:906
 #, c-format
@@ -5628,8 +5620,7 @@ msgstr ""
 msgid ""
 "Nautilus is a graphical shell for GNOME that makes it easy to manage your "
 "files and the rest of your system."
-msgstr ""
-"‏Nautilus הינו מעטפת גרפית עבור GNOME שמקלה את ניהול קבציך ושאר המערכת."
+msgstr "‏Nautilus הינו מעטפת גרפית עבור GNOME שמקלה את ניהול קבציך ושאר המערכת."
 
 #: ../src/nautilus-window-menus.c:454
 msgid "Copyright © 1999-2006 The Nautilus authors"
