Ellipsice location menu button at 16 chars. Patch from Tom Parker
2006-11-24  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-spatial-window.c:
	Ellipsice location menu button at 16 chars.
	Patch from Tom Parker

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-11-24  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-spatial-window.c:
+	Ellipsice location menu button at 16 chars.
+	Patch from Tom Parker
+
 2006-11-23  Federico Mena Quintero  <federico@novell.com>
 
 	Use the write-to-a-pipe trick from the signal handler instead of
