icons/nautilus-mini-logo.png
2006-11-28  Luca Ferretti  <elle.uca@libero.it>

	* icons/nautilus-desktop.png:
	* icons/nautilus-file-management-properties.png:
	* icons/nautilus-mini-logo.png
	* icons/Search.png:
	* icons/side_bar_image.png:
	Remove legacy icons from cvs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-11-28  Luca Ferretti  <elle.uca@libero.it>
+
+	* icons/nautilus-desktop.png:
+	* icons/nautilus-file-management-properties.png:
+	* icons/nautilus-mini-logo.png
+	* icons/Search.png:
+	* icons/side_bar_image.png:
+	Remove legacy icons from cvs.
+
 2006-11-24  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-spatial-window.c:
