Handle scroll wheel while rubberbanding. Patch from Nelson Benítez
2006-11-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	* libnautilus-private/nautilus-icon-private.h:
	Handle scroll wheel while rubberbanding.
	Patch from Nelson Benítez

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-28  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	* libnautilus-private/nautilus-icon-private.h:
+	Handle scroll wheel while rubberbanding.
+	Patch from Nelson Benítez
+
 2006-11-28  Luca Ferretti  <elle.uca@libero.it>
 
 	* icons/nautilus-desktop.png:
