--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-11-28  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-tree-view.c:
+	Add delete menu item if configured. (#132326)
+	Patch from Ferran Puig
+
+2006-11-28  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	* libnautilus-private/nautilus-icon-private.h:
 	Handle scroll wheel while rubberbanding.
