--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus HEAD\n"
+"Project-Id-Version: nautilus 2.16\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
 "PO-Revision-Date: 2006-11-08 16:16+0200\n"
