--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-28  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-11-28  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
