--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-11-08 16:16+0200\n"
+"PO-Revision-Date: 2006-11-24 08:25+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -5558,6 +5558,10 @@ msgstr "<b>_Otsi:</b>"
 #: ../src/nautilus-query-editor.c:1085
 msgid "Search results"
 msgstr "Otsingutulemused"
+
+#: ../src/nautilus-search-bar.c:141
+msgid "Search:"
+msgstr "Otsing:"
 
 #: ../src/nautilus-search-bar.c:142
 msgid "<b>Search:</b>"
