--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-29  Runa Bhattacharjee <runabh@gmail.com>
+
+	* bn_IN.po: Corrected a typo.
+
 2006-11-28  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
