--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-11-30  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	* libnautilus-private/nautilus-icon-container.c:
+	* libnautilus-private/nautilus-icon-private.h:
+	Add more themeing features for icon view icons.
+	Patch from JackTheDipper
+
 2006-11-28  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-tree-view.c:
