--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-1  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation.
+
 2006-11-29  Runa Bhattacharjee <runabh@gmail.com>
 
 	* bn_IN.po: Corrected a typo.
