Remove black outline, using Tango style. See bug 374722 for details.
2006-12-04  Luca Ferretti  <elle.uca@libero.it>

	* icons/knob.png:
	Remove black outline, using Tango style.
	See bug 374722 for details.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-04  Luca Ferretti  <elle.uca@libero.it>
+
+	* icons/knob.png:
+	Remove black outline, using Tango style.
+	See bug 374722 for details.
+
 2006-11-30  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
