icons/nautilus-server-connect.png Removed this legacy icon.
2006-12-04  Luca Ferretti  <elle.uca@libero.it>

	* icons/nautilus-server-connect.png
	Removed this legacy icon.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-12-04  Luca Ferretti  <elle.uca@libero.it>
 
+	* icons/nautilus-server-connect.png
+	Removed this legacy icon.
+
+2006-12-04  Luca Ferretti  <elle.uca@libero.it>
+
 	* configure.in:
 	* icons/Makefile.am:
 	* icons/appicon/*:
