--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-12-04  Alexander Larsson  <alexl@redhat.com>
 
+	* cut-n-paste-code/gsequence/gsequence.[ch]:
+	Import gsequence fix for #350579
+
+2006-12-04  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.[ch]:
 	* src/file-manager/fm-icon-container.c:
 	Freeze icon view updates while renaming to avoid things
