--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-04  Alexander Larsson  <alexl@redhat.com>
+
+	* cut-n-paste-code/gsequence/gsequence.[ch]:
+	Import gsequence fix for #350579
+
 2006-11-22  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-search-engine.c:
