Reveal selection on sort-order change.(#332667) Patch from Gene Z. Ragan
2006-12-04  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	Reveal selection on sort-order change.(#332667)
	Patch from Gene Z. Ragan

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-12-04  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c:
+	Reveal selection on sort-order change.(#332667)
+	Patch from Gene Z. Ragan 
+
+2006-12-04  Alexander Larsson  <alexl@redhat.com>
+
 	* cut-n-paste-code/gsequence/gsequence.[ch]:
 	Import gsequence fix for #350579
 
