--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-07  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* es.po: Updated Spanish translation.
+
 2006-12-04  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
