Disable the mask code for now...
2006-12-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Disable the mask code for now...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2006-12-08  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Disable the mask code for now...
+	
+2006-12-08  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
 	* libnautilus-private/nautilus-icon-container.c:
 	* libnautilus-private/nautilus-icon-private.h:
 	Draw selection rect using cairo.
