Schedule metadata removal when we get external remove events. Patch from
2006-12-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-monitor.c:
	Schedule metadata removal when we get external remove events.
	Patch from Gene Z. Ragan (#45953)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-12-08  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-monitor.c:
+	Schedule metadata removal when we get external remove events.
+	Patch from Gene Z. Ragan (#45953)
+
+2006-12-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-canvas-item.c:
 	Disable the mask code for now...
 	
