--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2006-12-08  Paolo Borelli  <pborelli@katamail.com>
+
+	* libnautilus-private/nautilus-desktop-link.c:
+	* libnautilus-private/nautilus-file-utilities.c:
+	* libnautilus-private/nautilus-query.c:
+	* src/nautilus-navigation-window.c:
+	* src/nautilus-navigation-window.h:
+	* src/nautilus-pathbar.c:
+	* src/nautilus-places-sidebar.c:
+	* src/nautilus-shell.c:
+	* src/nautilus-window-manage-views.c:
+	* src/nautilus-window.c:
+	* src/file-manager/fm-tree-model.c:
+	* src/file-manager/fm-tree-view.c:
+
+	Use nautilus_get_home_directory_uri everywhere instead of
+	open coding it and other minor cleanups.
+
 2006-12-08  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-monitor.c:
