Default location dialog to $home for desktop (#383840) Patch from
2006-12-12  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
	Default location dialog to $home for desktop (#383840)
	Patch from Guillaume Desmottes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-12  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
+	Default location dialog to $home for desktop (#383840)
+	Patch from Guillaume Desmottes
+
 2006-12-08  Paolo Borelli  <pborelli@katamail.com>
 
 	* libnautilus-private/nautilus-desktop-link.c:
