--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-12-12  Alexander Larsson  <alexl@redhat.com>
 
+	reviewed by: <delete if not using a buddy>
+
+	* src/nautilus-location-dialog.c: (nautilus_location_dialog_init):
+
+2006-12-12  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
 	Default location dialog to $home for desktop (#383840)
 	Patch from Guillaume Desmottes
