--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 2006-12-12  Alexander Larsson  <alexl@redhat.com>
 
-	reviewed by: <delete if not using a buddy>
-
 	* src/nautilus-location-dialog.c: (nautilus_location_dialog_init):
+	Don't expand vbox with dialog size (#384078)
+	Patch from Baptiste Mille-Mathias
 
 2006-12-12  Alexander Larsson  <alexl@redhat.com>
 
