--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-12  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-application.c (save_session_to_file): use
+	g_mkstemp instead of tempnam.
+
 2006-12-12  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-location-dialog.c: (nautilus_location_dialog_init):
