Update from Epiphany. Fixes #374623 and #382207.
2006-12-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-spinner.c:
	* src/ephy-spinner.h: Update from Epiphany. Fixes #374623 and #382207.

	* src/nautilus-window-toolbars.c: Fix wrong spinner size. Bug #376952.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-12-12  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-spinner.c: 
+	* src/ephy-spinner.h: Update from Epiphany. Fixes #374623 and #382207.
+
+	* src/nautilus-window-toolbars.c: Fix wrong spinner size. Bug #376952.
+
 2006-12-12  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-application.c (save_session_to_file): use
