--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2006-12-12  Federico Mena Quintero  <federico@novell.com>
+
+	* libnautilus-private/nautilus-debug-log.c
+	(DEFAULT_RING_BUFFER_NUM_LINES): Oops, make this 1000 by default;
+	30000 was way too big for normal usage.
+	(add_to_milestones): New function; adds a milestone string to a
+	linked list of milestones.
+	(nautilus_debug_logv): Call add_to_milestones() if appropriate.
+	(write_string): New helper function.
+	(dump_milestones): New helper function.
+	(dump_configuration): Use write_string().
+	(dump_ring_buffer): New helper function; moved the code from
+	nautilus_debug_log_dump().
+	(nautilus_debug_log_dump): Use dump_milestones() and dump_ring_buffer().
+	(dump_configuration): Print the instructions to re-create the
+	configuration here, instead of in nautilus_debug_log_dump().
+
 2006-12-12  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-spinner.c: 
