--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2006-12-13  Luca Ferretti  <elle.uca@libero.it>
+
+	* nautilus-computer.desktop.in.in:
+	* nautilus-file-management-properties.desktop.in.in:
+	* nautilus-home.desktop.in.in:
+	* src/nautilus-navigation-window-menus.c:
+	* src/nautilus-spatial-window.c:
+	* src/nautilus-window-menus.c:
+	* src/network-scheme.desktop.in:
+
+	Update comments and some menu entries to match suggestions on
+	http://live.gnome.org/UsabilityTeam/Menu
+
 2006-12-12  Federico Mena Quintero  <federico@novell.com>
 
 	* libnautilus-private/nautilus-debug-log.c
