--- a/po/nb.po
+++ b/po/nb.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.15.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-11 01:51+0100\n"
-"PO-Revision-Date: 2006-12-11 01:51+0100\n"
+"POT-Creation-Date: 2006-12-15 10:54+0100\n"
+"PO-Revision-Date: 2006-12-15 10:56+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -1107,7 +1107,6 @@ msgstr ""
 "Velg «Avmonter volum» i volumets kontekstmeny hvis du vil avmontere volumet."
 
 #: ../libnautilus-private/nautilus-desktop-link.c:179
-#: ../src/network-scheme.desktop.in.h:1
 msgid "Network Servers"
 msgstr "Nettverkstjenere"
 
@@ -1817,11 +1816,12 @@ msgstr "Søk"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:563
 #: ../libnautilus-private/nautilus-global-preferences.c:526
-#: ../nautilus-computer.desktop.in.in.h:1
+#: ../nautilus-computer.desktop.in.in.h:2
 msgid "Computer"
 msgstr "Datamaskin"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:565
+#: ../src/network-scheme.desktop.in.h:2
 msgid "Network"
 msgstr "Nettverk"
 
@@ -2470,13 +2470,14 @@ msgstr "Gjenopprett redigering"
 msgid "Redo the edit"
 msgstr "Gjenopprett redigeringen"
 
-#: ../nautilus-computer.desktop.in.in.h:2
-msgid "View your computer storage"
-msgstr "Vis datamaskinens filer"
+#: ../nautilus-computer.desktop.in.in.h:1
+msgid ""
+"Browse all local and remote disks and folder accessible from this computer"
+msgstr "Bla gjennom alle lokale og eksterne disker og mapper som kan nås fra denne datamaskinen"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
-msgid "Change how files are managed"
-msgstr "Endre måten filer håndteres"
+msgid "Change the behaviour and appearance of file manager windows"
+msgstr "Endre oppførsel og utseende for filhåndterervinduer"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:2
 msgid "File Management"
@@ -2490,9 +2491,10 @@ msgstr "Åpne mappe"
 msgid "Home Folder"
 msgstr "Hjemmemappe"
 
-#: ../nautilus-home.desktop.in.in.h:2
-msgid "View your home folder in the Nautilus file manager"
-msgstr "Vis din hjemmemappe i Nautilus filhåndtereren"
+#. label, accelerator
+#: ../nautilus-home.desktop.in.in.h:2 ../src/nautilus-window-menus.c:657
+msgid "Open your personal folder"
+msgstr "Åpne din personlige mappe"
 
 #: ../nautilus.desktop.in.in.h:1
 msgid "Browse the file system with the file manager"
@@ -4191,12 +4193,12 @@ msgstr "Tre"
 msgid "Show Tree"
 msgstr "Vis tre"
 
-#: ../src/nautilus-application.c:274
+#: ../src/nautilus-application.c:275
 #, c-format
 msgid "Nautilus could not create the required folder \"%s\"."
 msgstr "Nautilus kunne ikke opprette nødvendig mappe «%s»."
 
-#: ../src/nautilus-application.c:276
+#: ../src/nautilus-application.c:277
 msgid ""
 "Before running Nautilus, please create the following folder, or set "
 "permissions such that Nautilus can create it."
@@ -4204,12 +4206,12 @@ msgstr ""
 "Opprett denne mappen før du kjører Nautilus, eller endre rettighetene slik "
 "at Nautilus kan opprette den."
 
-#: ../src/nautilus-application.c:279
+#: ../src/nautilus-application.c:280
 #, c-format
 msgid "Nautilus could not create the following required folders: %s."
 msgstr "Nautilus kunne ikke opprette følgende mapper som kreves: %s."
 
-#: ../src/nautilus-application.c:281
+#: ../src/nautilus-application.c:282
 msgid ""
 "Before running Nautilus, please create these folders, or set permissions "
 "such that Nautilus can create them."
@@ -4217,17 +4219,17 @@ msgstr ""
 "Vennligst opprett disse mappene før du kjører Nautilus, eller sett "
 "rettigheter slik at Nautilus kan opprette dem."
 
-#: ../src/nautilus-application.c:340
+#: ../src/nautilus-application.c:341
 msgid "Link To Old Desktop"
 msgstr "Lenke til gammelt skrivebord"
 
-#: ../src/nautilus-application.c:356
+#: ../src/nautilus-application.c:357
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
 msgstr ""
 "En lenke med navn «Lenke til gammelt skrivebord» ble opprettet på "
 "skrivebodet."
 
-#: ../src/nautilus-application.c:357
+#: ../src/nautilus-application.c:358
 msgid ""
 "The location of the desktop directory has changed in GNOME 2.4. You can open "
 "the link and move over the files you want, then delete the link."
@@ -4245,7 +4247,7 @@ msgstr ""
 #. * this problem but we don't exactly understand why,
 #. * since neither of the above causes explain it.
 #.
-#: ../src/nautilus-application.c:553
+#: ../src/nautilus-application.c:554
 msgid ""
 "Nautilus can't be used now. Running the command \"bonobo-slay\" from the "
 "console may fix the problem. If not, you can try rebooting the computer or "
@@ -4256,7 +4258,7 @@ msgstr ""
 "datamaskinen på nytt eller installere Nautilus på nytt."
 
 #. FIXME bugzilla.gnome.org 42536: The guesses and stuff here are lame.
-#: ../src/nautilus-application.c:559
+#: ../src/nautilus-application.c:560
 msgid ""
 "Nautilus can't be used now. Running the command \"bonobo-slay\" from the "
 "console may fix the problem. If not, you can try rebooting the computer or "
@@ -4303,12 +4305,12 @@ msgstr ""
 #. * good message.
 #.
 #. FIXME bugzilla.gnome.org 42538: When can this happen?
-#: ../src/nautilus-application.c:589 ../src/nautilus-application.c:607
-#: ../src/nautilus-application.c:614
+#: ../src/nautilus-application.c:590 ../src/nautilus-application.c:608
+#: ../src/nautilus-application.c:615
 msgid "Nautilus can't be used now, due to an unexpected error."
 msgstr "Nautilus kan ikke brukes nå, pga en uventet feil."
 
-#: ../src/nautilus-application.c:590
+#: ../src/nautilus-application.c:591
 msgid ""
 "Nautilus can't be used now, due to an unexpected error from Bonobo when "
 "attempting to register the file manager view server."
@@ -4316,7 +4318,7 @@ msgstr ""
 "Nautilus kan ikke brukes nå pga en uventet feil fra Bonobo under forsøk på å "
 "registrere visningstjeneren i filbehandleren."
 
-#: ../src/nautilus-application.c:608
+#: ../src/nautilus-application.c:609
 msgid ""
 "Nautilus can't be used now, due to an unexpected error from Bonobo when "
 "attempting to locate the factory.Killing bonobo-activation-server and "
@@ -4326,7 +4328,7 @@ msgstr ""
 "å finne factory. Du kan fikse problemet ved å drepe bonobo-activation-server "
 "og starte Nautilus på nytt."
 
-#: ../src/nautilus-application.c:615
+#: ../src/nautilus-application.c:616
 msgid ""
 "Nautilus can't be used now, due to an unexpected error from Bonobo when "
 "attempting to locate the shell object. Killing bonobo-activation-server and "
@@ -5166,14 +5168,14 @@ msgstr "Vis et vindu som tillater redigering av bokmerkene i denne menyen"
 
 #: ../src/nautilus-navigation-window-menus.c:446
 #: ../src/nautilus-spatial-window.c:877
-msgid "_Search"
-msgstr "_Søk"
+msgid "_Search for Files..."
+msgstr "_Søk etter filer..."
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:447
 #: ../src/nautilus-spatial-window.c:878
-msgid "Search for files"
-msgstr "Søk etter filer"
+msgid "Locate documents and folders on this computer by name or content"
+msgstr "Finn dokumenter og mapper på denne datamaskinen etter navn eller innhold"
 
 #. name, stock id
 #: ../src/nautilus-navigation-window-menus.c:454
@@ -5241,6 +5243,10 @@ msgstr "Gå til neste besøkte lokasjon"
 #: ../src/nautilus-navigation-window-menus.c:514
 msgid "Forward history"
 msgstr "Fremover"
+
+#: ../src/nautilus-navigation-window-menus.c:528
+msgid "_Search"
+msgstr "_Søk"
 
 #: ../src/nautilus-navigation-window.c:171
 msgid "Toggle between button and text-based location bar"
@@ -5854,18 +5860,13 @@ msgstr "Koble til _tjener..."
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:653
-msgid "Set up a connection to a network server"
-msgstr "Opprett en tilkobling til en nettverkstjener"
+msgid "Connect to a remote computer or shared disk"
+msgstr "Koble til en ekstern datamaskin eller delt disk"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:656
-msgid "_Home"
-msgstr "_Hjem"
-
-#. label, accelerator
-#: ../src/nautilus-window-menus.c:657
-msgid "Go to the home folder"
-msgstr "Gå til hjemmemappen"
+msgid "_Home Folder"
+msgstr "_Hjemmemappe"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:660
@@ -5874,8 +5875,9 @@ msgstr "_Datamaskin"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:661
-msgid "Go to the computer location"
-msgstr "Gå til datamaskin-mappen"
+msgid ""
+"Browse all local and remote disks and folders accessible from this computer"
+msgstr "Bla gjennom alle lokale og eksterne disker og mapper som kan nås fra denne datamaskinen"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:664
@@ -5883,9 +5885,9 @@ msgid "_Network"
 msgstr "_Nettverk"
 
 #. label, accelerator
-#: ../src/nautilus-window-menus.c:665
-msgid "Go to the network location"
-msgstr "Gå til nettverkslokasjonen"
+#: ../src/nautilus-window-menus.c:665 ../src/network-scheme.desktop.in.h:1
+msgid "Browse bookmarked and local network locations"
+msgstr "Bla gjennom nettverkslokasjoner i bokmerker og lokalt"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:668
@@ -5894,8 +5896,8 @@ msgstr "_Maler"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:669
-msgid "Go to the templates folder"
-msgstr "Gå til malmappen"
+msgid "Open your personal templates folder"
+msgstr "Åpne din personlige malmappe"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:672
@@ -5904,22 +5906,26 @@ msgstr "_Papirkurv"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:673
-msgid "Go to the trash folder"
-msgstr "Gå til papirkurven"
+msgid "Open your personal trash folder"
+msgstr "Åpne din personlige papirkurv"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:676
-msgid "CD/_DVD Creator"
-msgstr "CD/_DVD-brenner"
+msgid "CD/_DVD"
+msgstr "CD/_DVD"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:677
-msgid "Go to the CD/DVD Creator"
-msgstr "Gå til CD/DVD-brenner"
+msgid "Open a folder into which you can drag files to burn to a CD or DVD"
+msgstr "Åpne en mappe hvor du kan dra filer for å brenne en CD eller DVD"
 
 #: ../src/nautilus-window-menus.c:703
 msgid "_Up"
 msgstr "_Opp"
+
+#: ../src/nautilus-window-menus.c:706
+msgid "_Home"
+msgstr "_Hjem"
 
 #: ../src/nautilus-zoom-control.c:84
 msgid "Zoom In"
@@ -5944,7 +5950,3 @@ msgstr "Zoom"
 #: ../src/nautilus-zoom-control.c:807
 msgid "Set the zoom level of the current view"
 msgstr "Sett zoom-nivå for aktiv visning"
-
-#: ../src/network-scheme.desktop.in.h:2
-msgid "View your network servers in the Nautilus file manager"
-msgstr "Vis dine nettverkstjenere i filhåndtereren Nautilus"
