Fix a typo in previous commit (folders, not folder)
2006-12-15  Luca Ferretti  <elle.uca@libero.it>

	* nautilus-computer.desktop.in.in:

	Fix a typo in previous commit (folders, not folder)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-12-15  Luca Ferretti  <elle.uca@libero.it>
 
+	* nautilus-computer.desktop.in.in:
+
+	Fix a typo in previous commit (folders, not folder)
+
+2006-12-15  Luca Ferretti  <elle.uca@libero.it>
+
 	* src/nautilus-actions.h:
 
 	Add NAUTILUS_ACTION_HOME for Go->Home Folder
