plug a tiny leak.
2006-12-16  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-navigation-window.c (add_sidebar_panels): plug
	a tiny leak.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-16  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-navigation-window.c (add_sidebar_panels): plug
+	a tiny leak.
+
 2006-12-15  Luca Ferretti  <elle.uca@libero.it>
 
 	* nautilus-computer.desktop.in.in:
