--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-18  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation.
+
 2006-12-15  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
