Use "document-new", "folder-new" named icon from Icon Naming Spec for
2006-12-18  Luca Ferretti  <elle.uca@libero.it>

	* src/file-manager/fm-directory-view.c:

	Use "document-new", "folder-new" named icon from
	Icon Naming Spec for File->Create Document and
	File->Create Folder menu entries.

	* src/nautilus-navigation-window-menus.c:

	Use "window-new" named icon from Icon Naming Spec for
	File->New Window menu entry in browser window.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2006-12-18  Luca Ferretti  <elle.uca@libero.it>
+
+	* src/file-manager/fm-directory-view.c:
+
+	Use "document-new", "folder-new" named icon from
+	Icon Naming Spec for File->Create Document and
+	File->Create Folder menu entries.
+
+	* src/nautilus-navigation-window-menus.c:
+
+	Use "window-new" named icon from Icon Naming Spec for 
+	File->New Window menu entry in browser window.
+
 2006-12-16  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-navigation-window.c (add_sidebar_panels): plug
