Add an extra widget to the trash folder with the "Empty Trash" button.
2006-12-18  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-trash-bar.c:
	* src/nautilus-trash-bar.c:
	* src/nautilus-window-manage-views.c:

	Add an extra widget to the trash folder with the "Empty Trash"
	button. Kudos also to Lakin Wecker who came up with a similar
	patch some months ago, though it never went in.

	* src/nautilus-information-panel.c:

	Remove the "Empty Trash" and "Burn" buttons from the side pane
	since we now have extra location widgets.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2006-12-18  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-trash-bar.c:
+	* src/nautilus-trash-bar.c:
+	* src/nautilus-window-manage-views.c:
+
+	Add an extra widget to the trash folder with the "Empty Trash"
+	button. Kudos also to Lakin Wecker who came up with a similar
+	patch some months ago, though it never went in.
+
+	* src/nautilus-information-panel.c:
+
+	Remove the "Empty Trash" and "Burn" buttons from the side pane
+	since we now have extra location widgets.
+
 2006-12-18  Luca Ferretti  <elle.uca@libero.it>
 
 	* src/file-manager/fm-directory-view.c:
