Remove unneeded function I left in by mistake.
2006-12-18  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-trash-bar.c:
	* src/nautilus-trash-bar.h:

	Remove unneeded function I left in by mistake.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,14 @@
 2006-12-18  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-trash-bar.c:
+	* src/nautilus-trash-bar.h:
+
+	Remove unneeded function I left in by mistake.
+
+2006-12-18  Paolo Borelli  <pborelli@katamail.com>
+
 	* src/nautilus-trash-bar.c:
+	* src/nautilus-trash-bar.h:
 	* src/nautilus-window-manage-views.c:
 
 	Add an extra widget to the trash folder with the "Empty Trash"
