Update for release.
2006-12-18  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-18  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release.
+
 2006-12-18  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-trash-bar.c:
