--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Major changes in 2.17.1 are:
+* Empty trash button in trash
+* New menu icons for new document/folder/window
+* Ring buffer for debugging
+* Fix spinner size
+* Open location dialog on desktop defaults to home
+* Remove metadata on external delete events
+* Draw text selection rectangle using cairo
+* Jump to selection on sort order change
+* Fix gsequence crash
+* Freeze icon view while renaming
+* New theming features for icon view
+* New icon in about dialog
+* Handle scroll button while rubberbanding
+* Ellipsize menu button at 16 chars
+
 Major changes in 2.16.3 are:
 * Revert a patch that caused icons to move around
 * Fix crash introduced in 2.16.2
