--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-12-18  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.17.1 ===
+	
+2006-12-18  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release.
 
