--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-18  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* es.po: Updated Spanish translation.
+
 === nautilus 2.17.1 ===
 	
 2006-12-18  Djihed Afifi <djihed@gmail.com> 
