--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-12-18  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-extension/nautilus-file-info.c:
+	* libnautilus-extension/nautilus-file-info.h:
+	* libnautilus-private/nautilus-file.c:
+	Add nautilus_file_info_get_activation_uri().
+
 2006-12-18  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
