Avoid markup in translatable messages (#360448). Patch from Elijah Newren
2006-12-19  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-image-properties-page.c: (load_finished):
	* src/nautilus-query-editor.c: (nautilus_query_editor_init),
	(setup_internal_entry):
	Avoid markup in translatable messages (#360448).
	Patch from Elijah Newren <newren@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-12-19  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-image-properties-page.c: (load_finished):
+	* src/nautilus-query-editor.c: (nautilus_query_editor_init),
+	(setup_internal_entry):
+	Avoid markup in translatable messages (#360448).
+	Patch from Elijah Newren <newren@gmail.com>
+
 2006-12-18  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-navigation-window.c:
