--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-12-19  Martin Wehner  <martin.wehner@gmail.com>
 
+	* libnautilus-private/nautilus-file-operations-progress.c:
+	(time_remaining_callback):
+	Zero-pad seconds in the remaining time display (#376291).
+	Patch from Sven Herzberg  <herzi@gnome-de.org>
+
+2006-12-19  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-image-properties-page.c: (load_finished):
 	* src/nautilus-query-editor.c: (nautilus_query_editor_init),
 	(setup_internal_entry):
