Oops, handle the case of an empty domains_hash.
2006-12-19  Federico Mena Quintero  <federico@novell.com>

	* libnautilus-private/nautilus-debug-log.c
	(make_key_file_from_configuration): Oops, handle the case of an
	empty domains_hash.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-19  Federico Mena Quintero  <federico@novell.com>
+
+	* libnautilus-private/nautilus-debug-log.c
+	(make_key_file_from_configuration): Oops, handle the case of an
+	empty domains_hash.
+
 2006-12-19  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file-operations-progress.c:
