--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-21  Ales Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian Translation by Ihar Hrachyshka.
+
 2006-12-20  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* es.po: Updated Spanish translation.
