--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-23  Raivis Dejus <orvils@gmail.com>
+
+        * lv.po: Updated Latvian Translation.
+
 2006-12-21  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian Translation by Ihar Hrachyshka.
