--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-24  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2006-12-23  Raivis Dejus <orvils@gmail.com>
 
         * lv.po: Updated Latvian Translation.
