--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-26  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2006-12-24  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation.
