Use proper macro for translating the scripts menu item (#389467). Patch
2006-12-27  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c: (real_merge_menus):
	Use proper macro for translating the scripts menu item (#389467).
	Patch from Gabor Kelemen  <kelemeng@gnome.hu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-27  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-directory-view.c: (real_merge_menus):
+	Use proper macro for translating the scripts menu item (#389467).
+	Patch from Gabor Kelemen  <kelemeng@gnome.hu>
+
 2006-12-19  Federico Mena Quintero  <federico@novell.com>
 
 	* libnautilus-private/nautilus-debug-log.c
