--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.skip: Add some files.
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-12-29  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
