--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-29  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2006-12-29  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.skip: Add some files.
