--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-31  Martin Wehner  <martin.wehner@gmail.com>
+
+	Add svn:externals property to include libbackground from gnome-2-16.
+
 2006-12-27  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c: (real_merge_menus):
