--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-01  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated English (British) translation
+
 2007-01-01  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
