--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2007-01-3  Djihed Afifi <djihed@gmail.com> 
+2007-01-03  Jakub Friedl <jfriedl@suse.cz>
+
+	* cs.po: Updated Czech Translation.
+
+2007-01-03  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -45,7 +49,7 @@
 
 2006-12-23  Raivis Dejus <orvils@gmail.com>
 
-        * lv.po: Updated Latvian Translation.
+	* lv.po: Updated Latvian Translation.
 
 2006-12-21  Ales Nyakhaychyk  <nab@mail.by>
 
