--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-07  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Updated Estonian Translation.
+
 2007-01-06  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
