--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-10  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2006-12-15  Subhransu Behera  <arya_subhransu@yahoo.co.in>
 
 	* or.po: Updated Oriya Translation.
