Udpated Catalan translation.
svn path=/trunk/; revision=12688

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-10  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2007-01-07  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Updated Estonian Translation.
