--- a/po/ca.po
+++ b/po/ca.po
@@ -1,18 +1,18 @@
 # nautilus translation to Catalan.
-# Copyright © 2000-2006 Free Software Foundation, Inc.
+# Copyright © 2000-2007 Free Software Foundation, Inc.
 # Softcatalà <info@softcatala.org>, 2000, 2001.
 # Valentín Trilles <vtrilles@yahoo.es>, 2002.
 # Sinner from the Prairy <sinner@escomposlinux.org>, 2002.
 # Jordi Mallach <jordi@sindominio.net>, 2002, 2003, 2004, 2005.
 # Aleix Badia i Bosch <abadia@ica.es>, 2004.
-# Josep Puigdemont <josep.puigdemont@gmail.com>, 2006.
+# Josep Puigdemont <josep.puigdemont@gmail.com>, 2006, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.9.91\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-29 20:07+0100\n"
-"PO-Revision-Date: 2006-12-29 20:14+0100\n"
+"POT-Creation-Date: 2007-01-10 01:33+0100\n"
+"PO-Revision-Date: 2007-01-10 01:36+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -3822,7 +3822,7 @@ msgstr "Mostra les icones en l'ordre invers"
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1466
 msgid "_Keep Aligned"
-msgstr "_Manté alineat"
+msgstr "_Mantén alineat"
 
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1467
@@ -5000,7 +5000,7 @@ msgstr "Valor d'obertura"
 
 #: ../src/nautilus-image-properties-page.c:235
 msgid "Metering Mode"
-msgstr "Mode de mesurament"
+msgstr "Mode de mesura"
 
 #: ../src/nautilus-image-properties-page.c:236
 msgid "Flash Fired"
@@ -5092,7 +5092,7 @@ msgstr[1] "Voleu visualitzar %d ubicacions?"
 
 #: ../src/nautilus-location-dialog.c:156
 msgid "Open Location"
-msgstr "Obre la ubicació"
+msgstr "Obre una ubicació"
 
 #: ../src/nautilus-location-dialog.c:167
 msgid "_Location:"
@@ -6015,7 +6015,7 @@ msgstr "Connecta al _servidor..."
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:653
 msgid "Connect to a remote computer or shared disk"
-msgstr ""
+msgstr "Connecta a un ordinador remot o un disc compartit"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:656
@@ -6035,7 +6035,7 @@ msgstr "_Xarxa"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:665 ../src/network-scheme.desktop.in.h:1
 msgid "Browse bookmarked and local network locations"
-msgstr ""
+msgstr "Navega adreces d'interès i ubicacions de xarxa locals"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:668
@@ -6066,6 +6066,7 @@ msgstr "CD/_DVD"
 #: ../src/nautilus-window-menus.c:677
 msgid "Open a folder into which you can drag files to burn to a CD or DVD"
 msgstr ""
+"Obre una carpeta on podeu arrossegar-hi fitxers per gravar en un CD o DVD"
 
 #: ../src/nautilus-window-menus.c:703
 msgid "_Up"
