Handle ui file load error better. Patch from Tom Parker
2007-01-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-ui-utilities.c:
        (nautilus_ui_string_get):
	Handle ui file load error better.
	Patch from Tom Parker


svn path=/trunk/; revision=12689

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-11  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-ui-utilities.c:
+        (nautilus_ui_string_get):
+	Handle ui file load error better.
+	Patch from Tom Parker
+
 2006-12-31  Martin Wehner  <martin.wehner@gmail.com>
 
 	Add svn:externals property to include libbackground from trunk.
