Handle NULL activation uris from drives
2007-01-11  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (get_target_file_for_original_file):
	
	Handle NULL activation uris from drives

svn path=/trunk/; revision=12690

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-01-11  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-properties-window.c (get_target_file_for_original_file):
+	
+	Handle NULL activation uris from drives
+	
+2007-01-11  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-ui-utilities.c:
         (nautilus_ui_string_get):
 	Handle ui file load error better.
