Add support for XF86 multimedia keys (#329920) .
2007-01-11  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-navigation-window.c:
	(nautilus_navigation_window_key_press_event)
	* src/nautilus-actions.h:
	* src/nautilus-window.c:
	(nautilus_window_key_press_event)
	* configure.in: 
	Add support for XF86 multimedia keys (#329920) .

svn path=/trunk/; revision=12693

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-01-11  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-navigation-window.c:
+	(nautilus_navigation_window_key_press_event)
+	* src/nautilus-actions.h:
+	* src/nautilus-window.c:
+	(nautilus_window_key_press_event)
+	* configure.in: 
+	Add support for XF86 multimedia keys (#329920) .
+
 2007-01-11  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-async.c (read_dot_hidden_file):
