Remove all pending eel preferences callbacks.
2007-01-11  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-directory-background.c:
	(nautilus_connect_background_to_file_metadata):
	Remove all pending eel preferences callbacks.

svn path=/trunk/; revision=12694

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-01-11  Christian Neumair  <chris@gnome-de.org>
 
+	* libnautilus-private/nautilus-directory-background.c:
+	(nautilus_connect_background_to_file_metadata):
+	Remove all pending eel preferences callbacks.
+
+2007-01-11  Christian Neumair  <chris@gnome-de.org>
+
 	* src/nautilus-navigation-window.c:
 	(nautilus_navigation_window_key_press_event)
 	* src/nautilus-actions.h:
