--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-11  Mark Gordon  <mtgordon@ximian.com>
+
+	* src/nautilus-property-browser.c (add_reset_property): Make the
+	"Reset" string translatable.  Fixes #394328.  Patch committed by
+	Federico Mena-Quintero <federico@novell.com>.
+
 2006-12-31  Martin Wehner  <martin.wehner@gmail.com>
 
 	Add svn:externals property to include libbackground from gnome-2-16.
