Restore "CD/DVD Creator" label for menu item. Was removed by a
2007-01-18  Luca Ferretti  <elle.uca@libero.it>

	* src/nautilus-window-menus.c:
	Restore "CD/DVD Creator" label for menu item. Was removed by
	a misunderstood, see bug #385382.


svn path=/trunk/; revision=12699

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-18  Luca Ferretti  <elle.uca@libero.it>
+
+	* src/nautilus-window-menus.c:
+	Restore "CD/DVD Creator" label for menu item. Was removed by
+	a misunderstood, see bug #385382.
+
 2007-01-11  Mark Gordon  <mtgordon@ximian.com>
 
 	Merged from gnome-2-16:
