--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-22  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS: 
+	* configure.in:
+	Bump to 2.17.90
+
 2007-01-18  Christian Persch  <chpe@svn.gnome.org>
 
 	* cut-n-paste-code/libegg/eggtreemultidnd.c:
