--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.17.90 are:
+* Add nautilus_file_info_get_activation_uri for extensions
+* Zero-pad seconds in progress display
+* Fix permissions of files created from templates
+* Support multimedia keys
+* Fix leaks
+* Fix crashes
+
 Major changes in 2.17.1 are:
 * Empty trash button in trash
 * New menu icons for new document/folder/window
