--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-25  Luca Ferretti  <elle.uca@libero.it>
+
+	* nautilus-file-management-properties.desktop.in.in:
+	Move File Management capplet to PersonalSettings.
+
 2007-01-22  Alexander Larsson  <alexl@redhat.com>
 
 	* NEWS: 
