--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-26  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2007-01-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
