--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation by Robert-André Mauchin.
+
 2007-01-26  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
