Make translation of "Move to Trash" consistent
svn path=/trunk/; revision=12709

--- a/po/vi.po
+++ b/po/vi.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Nautilus 2.14.0 HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-10-20 07:47+0200\n"
-"PO-Revision-Date: 2006-10-20 15:44+0930\n"
+"PO-Revision-Date: 2007-01-28 10:45+0700\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -4155,7 +4155,7 @@ msgstr "Tạo thư mục"
 
 #: ../src/file-manager/fm-tree-view.c:1174
 msgid "Move to Trash"
-msgstr "Chuyển vào Sọt rác"
+msgstr "Cho vào Sọt rác"
 
 #: ../src/file-manager/fm-tree-view.c:1238
 #: ../src/nautilus-places-sidebar.c:259
