--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-31  Ihar Hrachyshka  <iharh@gnome.org>
+
+	* be.po: Updated Belarusian translation.
+
 2007-01-31  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.
