Translation updated by Wouter Bolsterlee.
2007-01-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Translation updated by Wouter Bolsterlee.

svn path=/trunk/; revision=12714

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Translation updated by Wouter Bolsterlee.
+
 2007-01-31  Ihar Hrachyshka  <iharh@gnome.org>
 
 	* be.po: Updated Belarusian translation.
