--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-02  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-desktop-icon-file.c:
+	Fix crasher (#403565)
+	Patch from Padraig O'Briain
+
 2007-01-31  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-application.c (nautilus_application_present_spatial_window_with_selection):
