--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-03  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2007-01-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* nl.po: Translation updated by Wouter Bolsterlee.
