src/file-manager/fm-directory-view.c src/file-manager/fm-tree-view.c
2007-02-05  Jesse Stockall <jesse@cleverone.org>

       * src/file-manager/fm-directory-view.c
       * src/file-manager/fm-tree-view.c
       * src/nautilus-places-sidebar.c
       * libnautilus-private/nautilus-file-operations.[ch]
       Prompts to empty trash when unmounting drives. Closes #138058


svn path=/trunk/; revision=12724

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-05  Jesse Stockall <jesse@cleverone.org>
+
+       * src/file-manager/fm-directory-view.c
+       * src/file-manager/fm-tree-view.c
+       * src/nautilus-places-sidebar.c
+       * libnautilus-private/nautilus-file-operations.[ch]
+       Prompts to empty trash when unmounting drives. Closes #138058
+
 2007-02-05  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-list-model.c:
