Avoid translating nonvisible text. (#364466)
2007-02-06  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	Avoid translating nonvisible text. (#364466)


svn path=/trunk/; revision=12727

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-06  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c:
+	Avoid translating nonvisible text. (#364466)
+
+2007-02-06  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-thumbnails.c:
         (nautilus_thumbnail_load_image):
 	Fix crash on broken images. (#403255)
